--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,5 @@ RewriteEngine on
 RewriteCond %{HTTP_HOST} ^testing\.loergroup\.com$ [OR]
 RewriteCond %{HTTP_HOST} ^www\.testing\.loergroup\.com$
 RewriteRule ^/?$ "https\:\/\/testing\.loergroup\.com\/public" [R=301,L]
+RewriteRule ^writable/(.*)$ /writable/$1 [L]
 
