--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,11 @@
         "ext-mbstring": "*",
         "dompdf/dompdf": "^2.0",
         "laminas/laminas-escaper": "^2.9",
-        "psr/log": "^1.1"
+        "phpoffice/phpexcel": "^1.8",
+        "phpoffice/phpspreadsheet": "^2.1",
+        "phpoffice/phpword": "^1.2",
+        "psr/log": "^1.1",
+        "tecnickcom/tcpdf": "^6.7"
     },
     "require-dev": {
         "codeigniter/coding-standard": "^1.5",
